Fix mobile sidebar bug with selecting the right companies. Add TFC to mobile sidebar. Update TFC copy. Implement proper select bar handling on mobile redirect.

--- a/_sass/_our-companies.scss
+++ b/_sass/_our-companies.scss
@@ -16,7 +16,7 @@
     background-image: url('/assets/img/thorpe.jpg');
   }
   &.brighter-mechanical {
-    background-image: url('/assets/img/brighter_mechanical.jpg');
+    background-image: url('/assets/img/BM_Logo_Since1988_4C.jpg');
   }
   &.tfc-concrete {
     background-image: url('/assets/img/tfc_concrete.png');
